--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-hover<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <title>Airtable class example</title>
@@ -28,13 +28,14 @@ hover<!DOCTYPE html>
 </head>
 <body id="b">
 
+
       <div class="parent">
     <div class="text-container">
       <a class="item1" id="ShowAll"><p class="book" id="a">ClAssic</p><h2>BOOK COVERS</h2></a>
     <!--<h1>1900s / 1910s / 1920s / 1930s / 1940s / 1950s / 1960s / 1970s / 1980s / 1990s </h1>-->
       <div class="item2">
         <b><h1><button type="button" id="Adventure">ADVENTURE</button> / <button type="button" id="BannedBook"> BANNED BOOK</button>
-        / <button type="button" id="Childrens">CHILDREN'S</button> / <button type="button" id="ComingOfAge">COMING OF AGE</button> / <button type="button" id="Dystopian">DYSTOPIAN</button> / <button type="button" id="Fantasy">FANTASY</button> / <button type="button" id="Historical">HISTORICAL</button> / <button type="button" id="Mystery">MYSTERY</button> / <button type="button" id="ReadForSchool">READ FOR SCHOOL</button> / <button type="button" id="Romance">ROMANCE</button> / <button type="button" id="SciFi">SCI-FI</button> / <button type="button2" id="ShowAll" class="showall" >RESET</button> </h1></b>
+        / <button type="button" id="Childrens">CHILDREN'S</button> / <button type="button" id="ComingOfAge">COMING OF AGE</button> / <button type="button" id="Dystopian">DYSTOPIAN</button> / <button type="button" id="Fantasy">FANTASY</button> / <button type="button" id="Historical">HISTORICAL</button> / <button type="button" id="Mystery">MYSTERY</button> / <button type="button" id="ReadForSchool">READ FOR SCHOOL</button> / <button type="button" id="Romance">ROMANCE</button> / <button type="button" id="SciFi">SCI-FI</button> / <a href="https://angie7387.github.io/Classic-Book-Covers-Collections/"><button type="button2" id="ShowAll" class="showall"> ShowAll</button></a> </h1></b>
        
     </div>
 
