--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Airtable class example</title>
+    <title>Classic Book Covers</title>
     <!-- The website stylesheet -->
     <link rel="stylesheet" href="style.css" />
     <!-- The website JavaScript file -->
